// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RhelGraphCard Component should have specific breakpoint styles based on state: lg breakpoint 1`] = `
Object {
  "chartBarLabelComponentHeight": 40,
  "chartBarLabelComponentStyle": Object {
    "fontSize": 12,
  },
  "chartHeight": 200,
}
`;

exports[`RhelGraphCard Component should have specific breakpoint styles based on state: md breakpoint 1`] = `
Object {
  "chartBarLabelComponentHeight": 40,
  "chartBarLabelComponentStyle": Object {
    "fontSize": 14,
  },
  "chartHeight": 400,
}
`;

exports[`RhelGraphCard Component should have specific breakpoint styles based on state: sm breakpoint 1`] = `
Object {
  "chartBarLabelComponentHeight": 50,
  "chartBarLabelComponentStyle": Object {
    "fontSize": 14,
  },
  "chartHeight": 400,
}
`;

exports[`RhelGraphCard Component should have specific breakpoint styles based on state: xl breakpoint 1`] = `
Object {
  "chartBarLabelComponentHeight": 30,
  "chartBarLabelComponentStyle": Object {
    "fontSize": 8,
  },
  "chartHeight": 200,
}
`;

exports[`RhelGraphCard Component should have specific breakpoint styles based on state: xl2 breakpoint 1`] = `
Object {
  "chartBarLabelComponentHeight": 20,
  "chartBarLabelComponentStyle": Object {
    "fontSize": 8,
  },
  "chartHeight": 200,
}
`;

exports[`RhelGraphCard Component should have specific breakpoint styles based on state: xs breakpoint 1`] = `
Object {
  "chartBarLabelComponentHeight": 60,
  "chartBarLabelComponentStyle": Object {
    "fontSize": 14,
  },
  "chartHeight": 400,
}
`;

exports[`RhelGraphCard Component should render a non-connected component: non-connected 1`] = `
<RhelGraphCard
  breakpoints={Object {}}
  currentBreakpoint=""
  endDate={2019-06-30T00:00:00.000Z}
  error={false}
  fulfilled={false}
  getGraphReports={[Function]}
  graphData={
    Object {
      "usage": Array [],
    }
  }
  pending={false}
  startDate={2019-06-01T00:00:00.000Z}
  t={[Function]}
>
  <Card
    className="curiosity-usage-graph fadein"
  >
    <article
      className="pf-c-card curiosity-usage-graph fadein"
    >
      <CardHead>
        <div
          className="pf-c-card__head"
        >
          <h2>
            Daily CPU socket usage
          </h2>
          <CardActions>
            <div
              className="pf-c-card__actions"
            >
              <Dropdown
                autoFocus={true}
                className=""
                direction="down"
                dropdownItems={Array []}
                isGrouped={false}
                isOpen={false}
                isPlain={false}
                onSelect={[Function]}
                position="right"
                toggle={
                  <DropdownToggle
                    className=""
                    iconComponent={[Function]}
                    id=""
                    isActive={false}
                    isDisabled={true}
                    isFocused={false}
                    isHovered={false}
                    isOpen={false}
                    isPlain={false}
                    onToggle={[Function]}
                    parentRef={null}
                  >
                    Last 30 Days
                  </DropdownToggle>
                }
              >
                <DropdownWithContext
                  autoFocus={true}
                  className=""
                  direction="down"
                  dropdownItems={Array []}
                  isGrouped={false}
                  isOpen={false}
                  isPlain={false}
                  onSelect={[Function]}
                  position="right"
                  toggle={
                    <DropdownToggle
                      className=""
                      iconComponent={[Function]}
                      id=""
                      isActive={false}
                      isDisabled={true}
                      isFocused={false}
                      isHovered={false}
                      isOpen={false}
                      isPlain={false}
                      onToggle={[Function]}
                      parentRef={null}
                    >
                      Last 30 Days
                    </DropdownToggle>
                  }
                >
                  <div
                    className="pf-c-dropdown"
                  >
                    <DropdownToggle
                      ariaHasPopup={null}
                      className=""
                      iconComponent={[Function]}
                      id="pf-toggle-id-0"
                      isActive={false}
                      isDisabled={true}
                      isFocused={false}
                      isHovered={false}
                      isOpen={false}
                      isPlain={false}
                      key=".0"
                      onEnter={[Function]}
                      onToggle={[Function]}
                      parentRef={null}
                    >
                      <Toggle
                        ariaHasPopup={null}
                        className=""
                        id="pf-toggle-id-0"
                        isActive={false}
                        isDisabled={true}
                        isFocused={false}
                        isHovered={false}
                        isOpen={false}
                        isPlain={false}
                        isSplitButton={false}
                        onEnter={[Function]}
                        onToggle={[Function]}
                        parentRef={null}
                        type={null}
                      >
                        <button
                          aria-expanded={false}
                          aria-haspopup={null}
                          className="pf-c-dropdown__toggle pf-m-disabled"
                          disabled={true}
                          id="pf-toggle-id-0"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          type="button"
                        >
                          <span
                            className="pf-c-dropdown__toggle-text"
                          >
                            Last 30 Days
                          </span>
                          <CaretDownIcon
                            className="pf-c-dropdown__toggle-icon"
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                            title={null}
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              className="pf-c-dropdown__toggle-icon"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 320 512"
                              width="1em"
                            >
                              <path
                                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                transform=""
                              />
                            </svg>
                          </CaretDownIcon>
                        </button>
                      </Toggle>
                    </DropdownToggle>
                  </div>
                </DropdownWithContext>
              </Dropdown>
            </div>
          </CardActions>
        </div>
      </CardHead>
    </article>
  </Card>
</RhelGraphCard>
`;

exports[`RhelGraphCard Component should render multiple states: error shows zeroed bar values 1`] = `
Object {
  "chartBarData": Array [
    Object {
      "x": "Jun 1",
      "y": "0",
    },
    Object {
      "x": "Jun 2",
      "y": "0",
    },
    Object {
      "x": "Jun 3",
      "y": "0",
    },
    Object {
      "x": "Jun 4",
      "y": "0",
    },
    Object {
      "x": "Jun 5",
      "y": "0",
    },
    Object {
      "x": "Jun 6",
      "y": "0",
    },
    Object {
      "x": "Jun 7",
      "y": "0",
    },
    Object {
      "x": "Jun 8",
      "y": "0",
    },
    Object {
      "x": "Jun 9",
      "y": "0",
    },
    Object {
      "x": "Jun 10",
      "y": "0",
    },
    Object {
      "x": "Jun 11",
      "y": "0",
    },
    Object {
      "x": "Jun 12",
      "y": "0",
    },
    Object {
      "x": "Jun 13",
      "y": "0",
    },
    Object {
      "x": "Jun 14",
      "y": "0",
    },
    Object {
      "x": "Jun 15",
      "y": "0",
    },
    Object {
      "x": "Jun 16",
      "y": "0",
    },
    Object {
      "x": "Jun 17",
      "y": "0",
    },
    Object {
      "x": "Jun 18",
      "y": "0",
    },
    Object {
      "x": "Jun 19",
      "y": "0",
    },
    Object {
      "x": "Jun 20",
      "y": "0",
    },
    Object {
      "x": "Jun 21",
      "y": "0",
    },
    Object {
      "x": "Jun 22",
      "y": "0",
    },
    Object {
      "x": "Jun 23",
      "y": "0",
    },
    Object {
      "x": "Jun 24",
      "y": "0",
    },
    Object {
      "x": "Jun 25",
      "y": "0",
    },
    Object {
      "x": "Jun 26",
      "y": "0",
    },
    Object {
      "x": "Jun 27",
      "y": "0",
    },
    Object {
      "x": "Jun 28",
      "y": "0",
    },
    Object {
      "x": "Jun 29",
      "y": "0",
    },
    Object {
      "x": "Jun 30",
      "y": "0",
    },
  ],
}
`;

exports[`RhelGraphCard Component should render multiple states: fulfilled 1`] = `
<Card
  className="curiosity-usage-graph fadein"
>
  <CardHead>
    <h2>
      Daily CPU socket usage
    </h2>
    <CardActions>
      <Dropdown
        autoFocus={true}
        className=""
        direction="down"
        dropdownItems={Array []}
        isGrouped={false}
        isOpen={false}
        isPlain={false}
        onSelect={[Function]}
        position="right"
        toggle={
          <DropdownToggle
            className=""
            iconComponent={[Function]}
            id=""
            isActive={false}
            isDisabled={true}
            isFocused={false}
            isHovered={false}
            isOpen={false}
            isPlain={false}
            onToggle={[Function]}
            parentRef={null}
          >
            Last 30 Days
          </DropdownToggle>
        }
      />
    </CardActions>
  </CardHead>
  <CardBody>
    <div
      className="stack-chart-container"
    >
      <Chart
        domain={
          Object {
            "x": Array [
              0,
              31,
            ],
          }
        }
        domainPadding={
          Object {
            "x": Array [
              10,
              2,
            ],
            "y": Array [
              1,
              1,
            ],
          }
        }
        height={400}
      >
        <ChartStack>
          <ChartBar
            data={
              Array [
                Object {
                  "x": "Jun 1",
                  "y": "0",
                },
                Object {
                  "x": "Jun 2",
                  "y": "0",
                },
                Object {
                  "x": "Jun 3",
                  "y": "0",
                },
                Object {
                  "x": "Jun 4",
                  "y": "0",
                },
                Object {
                  "x": "Jun 5",
                  "y": "0",
                },
                Object {
                  "x": "Jun 6",
                  "y": "0",
                },
                Object {
                  "x": "Jun 7",
                  "y": "0",
                },
                Object {
                  "x": "Jun 8",
                  "y": "0",
                },
                Object {
                  "x": "Jun 9",
                  "y": "0",
                },
                Object {
                  "x": "Jun 10",
                  "y": "0",
                },
                Object {
                  "x": "Jun 11",
                  "y": "0",
                },
                Object {
                  "x": "Jun 12",
                  "y": "0",
                },
                Object {
                  "x": "Jun 13",
                  "y": "0",
                },
                Object {
                  "x": "Jun 14",
                  "y": "0",
                },
                Object {
                  "x": "Jun 15",
                  "y": "0",
                },
                Object {
                  "x": "Jun 16",
                  "y": "0",
                },
                Object {
                  "x": "Jun 17",
                  "y": "0",
                },
                Object {
                  "x": "Jun 18",
                  "y": "0",
                },
                Object {
                  "x": "Jun 19",
                  "y": "0",
                },
                Object {
                  "x": "Jun 20",
                  "y": "0",
                },
                Object {
                  "x": "Jun 21",
                  "y": "0",
                },
                Object {
                  "x": "Jun 22",
                  "y": "0",
                },
                Object {
                  "x": "Jun 23",
                  "y": "0",
                },
                Object {
                  "x": "Jun 24",
                  "y": "0",
                },
                Object {
                  "x": "Jun 25",
                  "y": "0",
                },
                Object {
                  "x": "Jun 26",
                  "y": "0",
                },
                Object {
                  "x": "Jun 27",
                  "y": "0",
                },
                Object {
                  "x": "Jun 28",
                  "y": "0",
                },
                Object {
                  "x": "Jun 29",
                  "y": "0",
                },
                Object {
                  "x": "Jun 30",
                  "y": "0",
                },
              ]
            }
            labelComponent={
              <ChartTooltip
                height={20}
                labelComponent={
                  <ChartLabel
                    className="curiosity-usage-graph-tooltip-text"
                    dy={-1}
                  />
                }
                style={
                  Object {
                    "fontSize": 14,
                  }
                }
                theme={
                  Object {
                    "area": Object {
                      "height": 300,
                      "padding": 50,
                      "style": Object {
                        "data": Object {
                          "fill": "#151515",
                          "fillOpacity": 0.4,
                          "stroke": "transparent",
                          "strokeWidth": 2,
                        },
                        "labels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                          "textAnchor": "middle",
                        },
                      },
                      "width": 450,
                    },
                    "axis": Object {
                      "height": 300,
                      "padding": 50,
                      "style": Object {
                        "axis": Object {
                          "fill": "transparent",
                          "stroke": "#d2d2d2",
                          "strokeLinecap": "round",
                          "strokeLinejoin": "round",
                          "strokeWidth": 1,
                        },
                        "axisLabel": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 100,
                          "stroke": "transparent",
                          "textAnchor": "middle",
                        },
                        "grid": Object {
                          "fill": "none",
                          "pointerEvents": "painted",
                          "stroke": "none",
                          "strokeLinecap": "round",
                          "strokeLinejoin": "round",
                        },
                        "tickLabels": Object {
                          "fill": "#4d5258",
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                        },
                        "ticks": Object {
                          "fill": "transparent",
                          "size": 5,
                          "stroke": "none",
                          "strokeLinecap": "round",
                          "strokeLinejoin": "round",
                          "strokeWidth": 1,
                        },
                      },
                      "width": 450,
                    },
                    "bar": Object {
                      "barWidth": 10,
                      "height": 300,
                      "padding": 50,
                      "style": Object {
                        "data": Object {
                          "fill": "#151515",
                          "padding": 8,
                          "stroke": "none",
                          "strokeWidth": 0,
                        },
                        "labels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                        },
                      },
                      "width": 450,
                    },
                    "boxplot": Object {
                      "boxWidth": 20,
                      "height": 300,
                      "padding": 50,
                      "style": Object {
                        "max": Object {
                          "padding": 8,
                          "stroke": "#151515",
                          "strokeWidth": 1,
                        },
                        "maxLabels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                        },
                        "median": Object {
                          "padding": 8,
                          "stroke": "#151515",
                          "strokeWidth": 1,
                        },
                        "medianLabels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                        },
                        "min": Object {
                          "padding": 8,
                          "stroke": "#151515",
                          "strokeWidth": 1,
                        },
                        "minLabels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                        },
                        "q1": Object {
                          "fill": "#8b8d8f",
                          "padding": 8,
                        },
                        "q1Labels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                        },
                        "q3": Object {
                          "fill": "#8b8d8f",
                          "padding": 8,
                        },
                        "q3Labels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                        },
                      },
                      "width": 450,
                    },
                    "candlestick": Object {
                      "candleColors": Object {
                        "negative": "#151515",
                        "positive": "#fff",
                      },
                      "height": 300,
                      "padding": 50,
                      "style": Object {
                        "data": Object {
                          "stroke": "#151515",
                          "strokeWidth": 1,
                        },
                        "labels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                          "textAnchor": "middle",
                        },
                      },
                      "width": 450,
                    },
                    "chart": Object {
                      "height": 300,
                      "padding": 50,
                      "width": 450,
                    },
                    "errorbar": Object {
                      "borderWidth": 8,
                      "height": 300,
                      "padding": 50,
                      "style": Object {
                        "data": Object {
                          "fill": "transparent",
                          "opacity": 1,
                          "stroke": "#151515",
                          "strokeWidth": 2,
                        },
                        "labels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                          "textAnchor": "middle",
                        },
                      },
                      "width": 450,
                    },
                    "group": Object {
                      "height": 300,
                      "padding": 50,
                      "width": 450,
                    },
                    "legend": Object {
                      "gutter": 20,
                      "orientation": "horizontal",
                      "style": Object {
                        "data": Object {
                          "type": "square",
                        },
                        "labels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                        },
                        "title": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 2,
                          "stroke": "transparent",
                        },
                      },
                      "titleOrientation": "top",
                    },
                    "line": Object {
                      "height": 300,
                      "padding": 50,
                      "style": Object {
                        "data": Object {
                          "fill": "transparent",
                          "opacity": 1,
                          "stroke": "#151515",
                          "strokeWidth": 2,
                        },
                        "labels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                          "textAnchor": "middle",
                        },
                      },
                      "width": 450,
                    },
                    "pie": Object {
                      "height": 230,
                      "padding": 8,
                      "style": Object {
                        "data": Object {
                          "padding": 8,
                          "stroke": "transparent",
                          "strokeWidth": 1,
                        },
                        "labels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 8,
                          "stroke": "transparent",
                        },
                      },
                      "width": 230,
                    },
                    "scatter": Object {
                      "height": 300,
                      "padding": 50,
                      "style": Object {
                        "data": Object {
                          "fill": "#151515",
                          "opacity": 1,
                          "stroke": "transparent",
                          "strokeWidth": 0,
                        },
                        "labels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                          "textAnchor": "middle",
                        },
                      },
                      "width": 450,
                    },
                    "stack": Object {
                      "height": 300,
                      "padding": 50,
                      "style": Object {
                        "data": Object {
                          "strokeWidth": 1,
                        },
                      },
                      "width": 450,
                    },
                    "tooltip": Object {
                      "cornerRadius": 0,
                      "flyoutStyle": Object {
                        "cornerRadius": 0,
                        "fill": "#151515",
                        "pointerEvents": "none",
                        "stroke": "#151515",
                        "strokeWidth": 0,
                      },
                      "pointerLength": 3,
                      "pointerWidth": 15,
                      "style": Object {
                        "fill": "#ededed",
                        "padding": 16,
                        "pointerEvents": "none",
                      },
                    },
                    "voronoi": Object {
                      "height": 300,
                      "padding": 50,
                      "style": Object {
                        "data": Object {
                          "fill": "transparent",
                          "stroke": "transparent",
                          "strokeWidth": 0,
                        },
                        "flyout": Object {
                          "fill": "#151515",
                          "pointerEvents": "none",
                          "stroke": "#151515",
                          "strokeWidth": 1,
                        },
                        "labels": Object {
                          "fill": "#ededed",
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 8,
                          "pointerEvents": "none",
                          "stroke": "transparent",
                          "textAnchor": "middle",
                        },
                      },
                      "width": 450,
                    },
                  }
                }
                width={80}
              />
            }
          />
        </ChartStack>
      </Chart>
    </div>
  </CardBody>
</Card>
`;

exports[`RhelGraphCard Component should render multiple states: pending 1`] = `
<Card
  className="curiosity-usage-graph fadein"
>
  <CardHead>
    <h2>
      Daily CPU socket usage
    </h2>
    <CardActions>
      <Dropdown
        autoFocus={true}
        className=""
        direction="down"
        dropdownItems={Array []}
        isGrouped={false}
        isOpen={false}
        isPlain={false}
        onSelect={[Function]}
        position="right"
        toggle={
          <DropdownToggle
            className=""
            iconComponent={[Function]}
            id=""
            isActive={false}
            isDisabled={true}
            isFocused={false}
            isHovered={false}
            isOpen={false}
            isPlain={false}
            onToggle={[Function]}
            parentRef={null}
          >
            Last 30 Days
          </DropdownToggle>
        }
      />
    </CardActions>
  </CardHead>
  <CardBody>
    <div
      className="skeleton-container"
    >
      <Skeleton
        size="xs"
      />
      <Skeleton
        size="sm"
      />
      <Skeleton
        size="md"
      />
      <Skeleton
        size="lg"
      />
    </div>
  </CardBody>
</Card>
`;
